--- a/static/index.html
+++ b/static/index.html
@@ -101,16 +101,24 @@
                   <a href="#" class="btn active" data-type="all">
                     All Ingredients
                   </a>
-                  <a href="#" class="btn deactive" data-type="Liquid">
-                    Liquid
+                  <a href="#" class="btn deactive" data-type="Strong">
+                    Strong
                   </a>
-                  <a href="#" class="btn deactive" data-type="Liquor">
-                    Liquor
+                  <a href="#" class="btn deactive" data-type="Soft">
+                    Soft
                   </a>
-                  <a href="#" class="btn deactive" data-type="Garnish">
-                    Garnish
+                  <a href="#" class="btn deactive" data-type="Other">
+                    Other
                   </a>
-                  <a href="#" class="btn deactive" data-type="Other"> Other </a>
+                  <a href="#" class="btn deactive" data-type="Juice">
+                    Juice
+                  </a>
+                  <a href="#" class="btn deactive" data-type="Fruit">
+                    Fruit
+                  </a>
+                  <a href="#" class="btn deactive" data-type="Beverage">
+                    Beverage
+                  </a>
                 </div>
               </div>
               <div class="fi-bottom">
@@ -159,9 +167,12 @@
                     <div class="form-group">
                       <label for="ingredient-type"> Ingredient Type: </label>
                       <select id="ingredient-type" name="ingredient-type">
-                        <option value="Liquid">Liquid</option>
-                        <option value="liquor">Liquor</option>
-                        <option value="garnish">Garnish</option>
+                        <option value="Strong">Strong</option>
+                        <option value="Soft">Soft</option>
+                        <option value="Other">Other</option>
+                        <option value="Juice">Juice</option>
+                        <option value="Fruit">Fruit</option>
+                        <option value="Beverage">Beverage</option>
                       </select>
                     </div>
                     <div class="form-group">
@@ -304,17 +315,23 @@
                       <a href="#" class="btn" data-type="all">
                         All Ingredients
                       </a>
-                      <a href="#" class="btn deactive" data-type="Liquid">
-                        Liquid
+                      <a href="#" class="btn deactive" data-type="Strong">
+                        Strong
                       </a>
-                      <a href="#" class="btn deactive" data-type="Liquor">
-                        Liquor
-                      </a>
-                      <a href="#" class="btn deactive" data-type="Garnish">
-                        Garnish
+                      <a href="#" class="btn deactive" data-type="Soft">
+                        Soft
                       </a>
                       <a href="#" class="btn deactive" data-type="Other">
                         Other
+                      </a>
+                      <a href="#" class="btn deactive" data-type="Juice">
+                        Juice
+                      </a>
+                      <a href="#" class="btn deactive" data-type="Fruit">
+                        Fruit
+                      </a>
+                      <a href="#" class="btn deactive" data-type="Beverage">
+                        Beverage
                       </a>
                     </div>
                   </div>
@@ -527,7 +544,7 @@
                   </div>
                   <div id="loading-page">
                     <h1>Processing Image...</h1>
-                    <p>Please wait while we process and save your image.</p>
+                    <p>Please wait while we process the drink.</p>
                     <div class="loading-spinner"></div>
                     <button id="cancel-button">Cancel</button>
                     <div id="progress-status"></div>
