Waitng Process Added

--- a/static/index.html
+++ b/static/index.html
@@ -543,10 +543,10 @@
                     </button>
                   </div>
                   <div id="loading-page">
-                    <h1>Processing Image...</h1>
-                    <p>Please wait while we process the drink.</p>
+                    <h1>Making Your Drink...</h1>
+                    <p>Please wait while we prepare your drink.</p>
                     <div class="loading-spinner"></div>
-                    <button id="cancel-button">Cancel</button>
+                    <button id="cancel-drink-button" class="cancel-button">Cancel Drink</button>
                     <div id="progress-status"></div>
                   </div>
                 </div>
